<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_margin_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_margin_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/poster"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_gradient"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_mask"
            app:layout_constraintBottom_toBottomOf="@id/img_poster"
            app:layout_constraintLeft_toLeftOf="@id/img_poster"
            app:layout_constraintRight_toRightOf="@id/img_poster"
            app:layout_constraintTop_toTopOf="@id/img_poster" />

        <TextView
            android:id="@+id/btn_back"
            style="@style/button_back_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:alpha="0.5"
            android:drawablePadding="8dp"
            android:text="@string/button_back_text"
            app:drawableStartCompat="@drawable/ic_path"
            app:fontFamily="sans-serif-thin"
            app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_pg"
            style="@style/pg_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="222dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/ic_rectangle"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/pg_text"
            app:layout_constraintBottom_toBottomOf="@id/img_poster"
            app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
            app:layout_constraintTop_toTopOf="@id/img_poster" />


        <TextView
            android:id="@+id/tv_name"
            style="@style/name_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            app:fontFamily="sans-serif-black"
            app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
            app:layout_constraintRight_toLeftOf="@id/guideline_margin_end"
            app:layout_constraintTop_toBottomOf="@id/tv_pg" />

        <TextView
            android:id="@+id/tv_tag_line"
            style="@style/tag_line_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/tag_line_text"
            app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
            app:layout_constraintRight_toLeftOf="@id/guideline_margin_end"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <ImageView
            android:id="@+id/img_first_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="3dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
            app:layout_constraintRight_toLeftOf="@id/img_second_star"
            app:layout_constraintTop_toBottomOf="@id/tv_tag_line" />

        <ImageView
            android:id="@+id/img_second_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="3dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/img_first_star"
            app:layout_constraintRight_toLeftOf="@id/img_third_star"
            app:layout_constraintTop_toBottomOf="@id/tv_tag_line" />

        <ImageView
            android:id="@+id/img_third_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="3dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/img_second_star"
            app:layout_constraintRight_toLeftOf="@id/img_fourth_star"
            app:layout_constraintTop_toBottomOf="@id/tv_tag_line" />

        <ImageView
            android:id="@+id/img_fourth_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="3dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/img_third_star"
            app:layout_constraintRight_toLeftOf="@id/img_fifth_star"
            app:layout_constraintTop_toBottomOf="@id/tv_tag_line" />

        <ImageView
            android:id="@+id/img_fifth_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_icon_gray"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/img_fourth_star"
            app:layout_constraintRight_toLeftOf="@id/tv_review"
            app:layout_constraintTop_toBottomOf="@id/tv_tag_line" />

        <TextView
            android:id="@+id/tv_review"
            style="@style/review_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/review_text"
            app:layout_constraintLeft_toRightOf="@id/img_fifth_star"
            app:layout_constraintRight_toLeftOf="@id/guideline_margin_end"
            app:layout_constraintTop_toBottomOf="@id/tv_tag_line" />

        <TextView
            android:id="@+id/tv_story_line"
            style="@style/story_line_cast_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/story_line_text"
            app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
            app:layout_constraintRight_toLeftOf="@id/guideline_margin_end"
            app:layout_constraintTop_toBottomOf="@id/tv_review" />

        <TextView
            android:id="@+id/tv_story_line_details"
            style="@style/story_line_details_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-thin"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/story_line_details_text"
            app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
            app:layout_constraintRight_toLeftOf="@id/guideline_margin_end"
            app:layout_constraintTop_toBottomOf="@id/tv_story_line" />

        <TextView
            android:id="@+id/tv_cast"
            style="@style/story_line_cast_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="sans-serif-black"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/cast_text"
            app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
            app:layout_constraintRight_toLeftOf="@id/guideline_margin_end"
            app:layout_constraintTop_toBottomOf="@id/tv_story_line_details" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_first_artist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/robert_downey"
            app:layout_constraintBottom_toTopOf="@id/tv_first_artist_info"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toRightOf="@id/guideline_margin_start"
            app:layout_constraintRight_toLeftOf="@id/img_second_artist"
            app:layout_constraintTop_toBottomOf="@id/tv_cast"
            app:shapeAppearance="@style/shape_image_artist" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_second_artist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/chris_evans"
            app:layout_constraintBottom_toTopOf="@id/tv_second_artist_info"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toRightOf="@id/img_first_artist"
            app:layout_constraintRight_toLeftOf="@id/img_third_artist"
            app:layout_constraintTop_toBottomOf="@id/tv_cast"
            app:shapeAppearance="@style/shape_image_artist" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_third_artist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mark_ruffalo"
            app:layout_constraintBottom_toTopOf="@id/tv_third_artist_info"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toRightOf="@id/img_second_artist"
            app:layout_constraintRight_toLeftOf="@id/img_fourth_artist"
            app:layout_constraintTop_toBottomOf="@id/tv_cast"
            app:shapeAppearance="@style/shape_image_artist" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_fourth_artist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/chris_hemsworth"
            app:layout_constraintBottom_toTopOf="@id/tv_fourth_artist_info"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toRightOf="@id/img_third_artist"
            app:layout_constraintRight_toLeftOf="@id/guideline_margin_end"
            app:layout_constraintTop_toBottomOf="@id/tv_cast"
            app:shapeAppearance="@style/shape_image_artist" />

        <TextView
            android:id="@+id/tv_first_artist_info"
            style="@style/artist_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/robert_downey_text"
            app:layout_constraintLeft_toLeftOf="@id/img_first_artist"
            app:layout_constraintRight_toRightOf="@id/img_first_artist"
            app:layout_constraintTop_toBottomOf="@id/img_first_artist" />

        <TextView
            android:id="@+id/tv_second_artist_info"
            style="@style/artist_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/chris_evans"
            app:layout_constraintLeft_toLeftOf="@id/img_second_artist"
            app:layout_constraintRight_toRightOf="@id/img_second_artist"
            app:layout_constraintTop_toBottomOf="@id/img_second_artist"/>

        <TextView
            android:id="@+id/tv_third_artist_info"
            style="@style/artist_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/mark_ruffalo"
            app:layout_constraintLeft_toLeftOf="@id/img_third_artist"
            app:layout_constraintRight_toRightOf="@id/img_third_artist"
            app:layout_constraintTop_toBottomOf="@id/img_third_artist"/>

        <TextView
            android:id="@+id/tv_fourth_artist_info"
            style="@style/artist_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/chris_hemsworth_text"
            app:layout_constraintLeft_toLeftOf="@id/img_fourth_artist"
            app:layout_constraintRight_toRightOf="@id/img_fourth_artist"
            app:layout_constraintTop_toBottomOf="@id/img_fourth_artist"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>